@@ -29,7 +29,7 @@ environment={% for name, value in task_env_vars.iteritems() %}{{ name }}="{{ val
 
 {% endfor %}
 
-{% if instance_config.plone_client_max_memory != '0' %}
+{% if instance_config.plone_hot_monitor == 'superlance' and instance_config.plone_client_max_memory != '0' %}
 [eventlistener:{{ supervisor_instance_discriminator }}memmon]
 command=memmon {% for client in range(1, instance_config.plone_client_count|int + 1) %} -p {{ supervisor_instance_discriminator }}zeoclient{{ client }}={{ instance_config.plone_client_max_memory }} {% endfor %} -c -m root -n {{ supervisor_instance_discriminator }}
 events=TICK_60
