@@ -1,5 +1,8 @@
 1.2.16 (unreleased)
 
+- Add plone_hot_monitor variable to control use of superlance.
+  [smcmahon]
+
 - Make default Plone 5.0.7.
   [smcmahon]
 
